made stub for getAllKeys
